@@ -25,6 +25,9 @@
 	* ipmiseld/: Audit and remove unnecessary memsets, add +1 to
 	string buffers.
 
+	* ipmipower/: Audit, remove unnecessary memsets, add +1 to string
+	buffers, minor cleanup.
+
 2016-10-03 Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/fru/ipmi-fru-data.c: Remove unnecessary memsets. 
